--- a/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
+++ b/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
@@ -116,4 +116,50 @@ MySQL不常用，更适合用搜索引擎来做
     在一个多列b-tree索引中，索引列的顺序意味着索引首先按照最左列进行排序，其次是第二列，等。所以，索引可以按照升序或者降序进行扫描，以满足精确符合列顺序的order by, group by 和 distinct等子句的查询需求。
 
     有的建议是：将选择性最高的列放到索引最前列。但是这个建议，**通常不如避免随机IO和排序那么重要**。
+
+    当不需要考虑排序和分组时，将选择性最高的列放在前面通常是很好地。这时候索引的作用只适用于优化where条件的查找。这种情况下，这样索引能最快地过滤出所需要的行，对于在where子句中只使用了索引部分前缀列的查询来说选择性也更高。然而，性能不只是依赖于所有索引列的选择性（整体基数），也和查询条件的具体值有关，也就是和值的分布有关。示例如下
+
+    ```sql
+    select * from payment where staff_id = 2 and customer_id = 584;
+    # 应该创建一个(staff_id,customer_id)还是应该颠倒以下顺序？可以跑一些查询来确定在这个表中的分布情况，并确定哪个列的选择性更高。
+    select sum(staff_id=2),sum(customer_id=584) from payment;
+    # sum(staff_id=2)：7992
+    # sum(customer_id=584)：30
+
+    select sum(staff_id=2) from payment where customer_id = 584;
+    # sum(staff_id=2)：17
+
+    # 需要注意的是，查询的结果非常依赖与选定的具体值，如果这样来，服务器的整体性能可能会更糟，或者不如预期
+    # 最好还是按照经验法则来，考虑全局技术和选择性，而不是某个具体查询
+    select count(distinct staff_id)/count(*) as staff_id_selectivity,
+        count(distinct customer_id)/count(*) as customer_id_selectivity,
+        count(*) from payment;
+    # 由结果可知，customer_id的选择性更高，所以它是索引列的第一列
+    alter table payment add key (customer_id,staff_id)
+    ```
+
+5. 聚簇索引
+
+    InnoDB的聚簇索引实际上在同一个结构中保存了B-tree索引和数据行。当表有局促索引时，它的数据行实际上存放在索引的叶子页中。因为无法同时把数据航存放在两个不同的地方，所以一个表只能有一个聚簇索引（覆盖索引可以模拟多个局促索引的情况）。
+
+    图例在这
+
+    如果没有定义主键，InnoDB会选择一个唯一的非空索引代替。如果没有这样的索引，InnoDB会隐式定义一个主键来作为聚簇索引。InnoDB只聚集在同一个页面中的记录。包含相邻键值的页面可能会相距甚远。
+
+    聚簇索引的一些优点：
     
+    - 可以把相关数据保存在一起。避免每一次都是磁盘IO
+    - 数据访问更快。聚簇索引将索引和数据保存在同一个B-tree中，从聚簇索引中获取数据通常比在非聚簇索引中查找要快
+    - 使用覆盖索引扫描的查询可以直接使用页节点中的主键值
+
+    聚簇索引的一些缺点：
+
+    - 最大限度的提高了I/O密集型应用的性能，但是数据如果全部都放在内存中，则反问的顺序就没有那么重要，聚簇索引也就没有什么优势
+    - 插入速度严重依赖与插入顺序，按照主键的顺序插入是加载数据到InnoDB表中速度最快的，但是如果不是按照主键顺序加载，那么加载完成后，需要使用optimize table重新组织一下表。
+    - 更新聚簇索引列的代价很高，因为会强制InnoDB将每个被更新的行移动到新的位置。
+    - 基于聚簇索引的表在插入新行，或者主键被更新导致需要移动行的时候，可能面临”页分裂（page split）“的问题。当行的主键值要求必须将这一行插入到某个已满的页中时，存储引擎会将改页分裂成两个页面来运行，页分裂会导致表占用更多的磁盘空间
+    - 聚簇索引可能导致全表扫描变慢，尤其是行比较稀疏，或者由于页分裂，导致的数据存储不连续的时候
+    - 二级索引（非聚簇索引）可能比想象的要更大，因为在二级索引的叶子节点包含了引用行的主键列。
+    - 二级索引访问需要两次索引查找，而不是一次
+
+    因为二级索引中保存的不是指向行的物理位置的指针，而是行的主键值。意味着通过二级索引查找行，存储引擎需要到二级索引的叶子节点获得对应的主键，然后根据这个值，去聚簇索引中查找到对应的行。自适应hash索引能减少这样的重复操作。
