--- a/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
+++ b/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
@@ -163,3 +163,27 @@ MySQL不常用，更适合用搜索引擎来做
     - 二级索引访问需要两次索引查找，而不是一次
 
     因为二级索引中保存的不是指向行的物理位置的指针，而是行的主键值。意味着通过二级索引查找行，存储引擎需要到二级索引的叶子节点获得对应的主键，然后根据这个值，去聚簇索引中查找到对应的行。自适应hash索引能减少这样的重复操作。
+
+    Innodb和myisam的数据分布对比：
+
+    myisam按照数据插入的顺序存储在磁盘上，每一行有个行号，因为行是定长的，所以myisam可以从表的开头跳过所需的字节找到需要的行。
+
+    myisam的图在这里
+
+    要注意的是，在innodb中，聚簇索引“就是表”，所以不想myisam那样需要独立的行存储。
+
+    聚簇索引的每一个叶子节点都包含了主键值，事务ID，用于事务和MVCC的回滚指针以及所有的剩余列。如果主键是一个列前缀索引，innodb也会包含完整的主键列和剩下的其他列。
+
+    innodb的二级索引和聚簇索引很不相同。innodb的二级索引的叶子节点中，存的不是行指针，而是主键值，以此作为行的指针。这样的策略减少了当出现行移动或者数据页分裂时二级索引的维护工作。使用主键值当指针会让二级索引占用更多的空间，但是好处是，innodb在移动行的时候无需更新行指针
+
+    聚簇索引，非聚簇索引，myisam保存数据和索引的区别，看这个图。
+    
+    从性能角度考虑，使用UUID作为聚簇索引会很糟糕，会使得聚簇索引的插入变得完全随机，最坏情况会导致数据没有任何聚集特性，而且插入不仅花费的时间更长，索引占用的空间也更大，页分裂和碎片化也更多。
+
+6. 覆盖索引
+
+    如果一个索引包含（或者是覆盖）所有需要查询的字段的值，不需要再次回表查询，称之为覆盖索引。
+    
+
+
+
