--- a/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
+++ b/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
@@ -182,8 +182,26 @@ MySQL不常用，更适合用搜索引擎来做
 
 6. 覆盖索引
 
-    如果一个索引包含（或者是覆盖）所有需要查询的字段的值，不需要再次回表查询，称之为覆盖索引。
-    
+    如果一个索引包含（或者是覆盖）所有需要查询的字段的值，不需要再次回表查询，称之为覆盖索引。覆盖索引的好处有这些
 
+    - 避免回表
+    - 索引数目远小于数据行大小，因此如果只需要读取索引，就能够极大的减少数据访问量对于IO密集的应用友好，索引也容易全部放到内存里面，有利于myisam的索引压缩
+    - 在单个页内，索引是按照顺序存储的，对于IO密集型的范围查询会比随机从磁盘读取每一行数据的IO少得多
+    - 一些存储引擎如myisam在内存中之缓存索引，数据则依赖于操作系统来缓存，因此，访问数据需要一次系统调用。可能会导致严重的性能问题，尤其是系统调用占了数据访问中的最大开销的场景。
+    - 由于InnoDB的聚簇索引，覆盖索引对InnoDB很有用。二级索引在叶子节点中保存了行的主键值，所以如果二级索引能覆盖查询，可以避免对主键索引的二次查询
+    
+    ```sql
+    explain select film_id,store_id from inventory;
+    ```
+
+    当执行这条sql的时候，extra列显示为Using index，这表示，索引覆盖了查询。但是覆盖索引有很多坑可能会导致无法实现优化。MySQL查询优化器会在执行查询前判断是否有一个索引能进行覆盖。假设索引覆盖了where条件中的字段，但不是整个查询涉及的字段。如果条件为false，MySQL5.5也总是会回表获取数据行，尽管并不需要这一行而且最终会被过滤掉。如果需要解决这个问题的话，需要使用**延迟关联**。
+
+7. 使用索引扫描来做排序
+
+    MySQL有两种方式可以生成有序的结果：**通过排序操作；或者按照搜因顺序扫描；**。如果explain出来的type列的值为index，说明MySQL使用了索引扫描来做排序。
+
+    索引的扫描是很快的，从一条移动到下一条即可，但是，如果说索引没有覆盖扫描行的话，每一条索引记录都需要回表查询一次对应的行，基本都是随机IO，因此按索引顺序读取数据的速度通常要比顺序的全表扫描慢，尤其是IO密集型的工作负载时。
+
+    因此，应该尽可能，既满足排序，又满足查找行，这样最好。**只有当索引的列顺序和order by子句的顺序完全一致，并且所有列的排序方向（正序或倒序）都一样时，MySQL才能使用索引对结果做排序。如果查询需要关联多张表，则只有当order by 子句引用的字段全部为第一个表时，才能使用索引做排序。order by 子句和查找型查询的限制是一样的：需要满足最左前缀的要求；否则；MySQL都需要执行排序操作，而无法利用索引排序。
 
 
