--- a/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
+++ b/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
@@ -202,6 +202,8 @@ MySQL不常用，更适合用搜索引擎来做
 
     索引的扫描是很快的，从一条移动到下一条即可，但是，如果说索引没有覆盖扫描行的话，每一条索引记录都需要回表查询一次对应的行，基本都是随机IO，因此按索引顺序读取数据的速度通常要比顺序的全表扫描慢，尤其是IO密集型的工作负载时。
 
-    因此，应该尽可能，既满足排序，又满足查找行，这样最好。**只有当索引的列顺序和order by子句的顺序完全一致，并且所有列的排序方向（正序或倒序）都一样时，MySQL才能使用索引对结果做排序。如果查询需要关联多张表，则只有当order by 子句引用的字段全部为第一个表时，才能使用索引做排序。order by 子句和查找型查询的限制是一样的：需要满足最左前缀的要求；否则；MySQL都需要执行排序操作，而无法利用索引排序。
+    因此，应该尽可能，既满足排序，又满足查找行，这样最好。**只有当索引的列顺序和order by子句的顺序完全一致，并且所有列的排序方向（正序或倒序）都一样时，MySQL才能使用索引对结果做排序。如果查询需要关联多张表，则只有当order by 子句引用的字段全部为第一个表时，才能使用索引做排序。order by 子句和查找型查询的限制是一样的：需要满足最左前缀的要求；否则；MySQL都需要执行排序操作，而无法利用索引排序。**
+
+    有一种情况下order by 子句可以不满足索引的最左前缀的要求，就是前导列为常量的时候。如果where子句或者join子句中对这些列制定了常量，就可以弥补索引的不足。
 
 
