--- a/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
+++ b/source/_posts/Book Nodes/高性能MySQL/3-创建高性能的索引.md
@@ -207,3 +207,30 @@ MySQL不常用，更适合用搜索引擎来做
     有一种情况下order by 子句可以不满足索引的最左前缀的要求，就是前导列为常量的时候。如果where子句或者join子句中对这些列制定了常量，就可以弥补索引的不足。
 
 
+8. 索引压缩
+
+    不太重要，myisam使用场景不多，不予考虑
+
+9. 冗余和重复索引
+
+    重复索引是指在相同的列上按照相同的顺序创建的相同类型的索引。应当避免，发现后应当立即删除
+
+    冗余索引大多数情况下都不需要，应当尽量扩展已有的索引而不是创建新索引。但是有时候，扩展已有的索引会导致其变的太多，从而影响其他使用该索引的查询的性能。同时，表中的索引越多插入的速度越慢。
+
+10. 未使用的索引
+
+    赶紧删了，可以通过information_schema.index_statistics表，获取到每个索引的使用频率
+
+11. 索引和锁
+
+    索引可以让查询锁定更少的行。如果查询从不访问那些不需要的行，那么就会锁定更少的行，从这方面来看对性能是有好处的。因为innodb虽然行锁效率高，内存使用少，当时锁定行的时候仍然会带来额外开销；其次，锁定超过需要的行会增加锁争用并减少并发性。
+
+    InnoDB只有在访问行的时候才对其枷锁，而索引能减少Innodb访问的行数，从而减少锁的数量。但是只有当innodb在存储引擎层能够过滤掉所有不需要的行时才有效。如果索引无法过滤无效的行，那么在innodb检索到数据并返回给服务器层以后，MySQL服务器才能应用where子句。这时候已经无法避免锁定行了：innodb已经锁住了这些行，适当的时候才会释放。
+
+    示例：
+
+    **explain出现了using where，这表示MySQL服务器将存储引擎返回行以后再应用过滤条件**。Innodb在二级索引上使用共享锁（读），但访问主键索引需要排他锁（写）。
+
+
+    
+
