--- a/source/_posts/Book Nodes/高性能MySQL/4-查询性能优化.md
+++ b/source/_posts/Book Nodes/高性能MySQL/4-查询性能优化.md
@@ -139,4 +139,207 @@ select * from post where post.id in (123,46,456,9992,9998);
 
 看起来可能会说，这有什么好处，结果不一样么，但是，用这种方式，有下面这些优势：
 
-- 让
+- 让缓存的效率更高。许多应用程序可以方便地缓存单边查询对应的结果对象。例如，上面查询的tag已经被缓存了，那么应用就可以跳过第一个查询。再例如，应用中已经缓存了ID为123,46,456,的内容，那么第三个查询的in中，就能少几个ID。另外，对MySQL的查询缓存来说，如果关联中的某个表发生了变化，那么就无法使用查询缓存了，而拆分后，如果某个表很少改变，那么基于该表的查询就可以重复利用查询缓存结果了。
+- 将查询分解后，执行单个查询可以减少锁的竞争
+- 在应用层做关联，可以更容易对数据库进行拆分，更容易做到高性能和可扩展
+- 查询本身效率也可能会有所提升。例子中，用in代替关联查询，可以让MySQL按照ID顺序进行查询,这可能比随机的关联更高效
+- 可以减少冗余记录的查询。在应用层做关联查询，意味着对于某条记录，应用只需要查询一次，而在数据库中做关联查询，则可能需要重复地访问一部分数据。从这点看，这样的重构还可能会减少网络和内存的消耗
+- 更进一步，这样做相当于在应用中实现了hash关联，而不是使用MySQL的嵌套循环关联。某些场景hash关联的效率要高很多。
+
+| 4.执行查询的基础
+
+图例在这里
+
+| 4.1 MySQL客户端/服务器通信协议
+
+MySQL客户端和服务器之间的通信协议是**半双工**的，这意味着，在任何一个时刻，要么是服务器向客户端发送数据，要么是客户端向服务器发送数据，两个动作不能同时发生。所以也无法将一个消息切成小块独立来发送。
+
+这种协议让MySQL同心简单快速，但是也从很多地方限制了MySQL。一个明显的限制是，这意味着没法进行流量控制。一旦一端开始发生消息，另一端要接收完整个消息才能响应它。就像扔沙包。
+
+客户端用一个单独的数据包将查询传给服务器。这也是为什么当查询的语句很长的时候，参数max_allowed_packet就特别重要了。一旦客户端发送了请求，它能做的事情就只是等待结果。
+
+相反的，一般服务器响应给用户的数据通常很多，由多个数据包组成。当服务器开始响应客户端请求时，客户端必须完整地接收整个返回结果，而不能简单地只取前面几条结果，然后让服务器停止发送数据。这种情况下，客户端若接收完整的结果，然后取前面几条需要的结果，或者接收完几条结果后就粗暴地断开连接，都不是好主意。这也就是在要的时候，一定要在查询中加limit的原因。
+
+多数链接MySQL的库函数都可以获得全部结果集并缓存到内存里，还可以逐行获取需要的数据。默认一般是获得全部结果集并缓存到内存中。MySQL通常需要等所有的数据都已经发送给客户端才能释放这条查询所占用的资源，所以接收全部结果并缓存通常可以减少服务器的压力，让查询能够早点结束、早点释放相应的资源。
+
+| 4.2 查询缓存
+
+在解析一个查询语句之前，如果查询缓存是打开的，那么MySQL会
+
+| 4.3 查询优化
+
+太多，不写了
+
+**MySQL如何执行关联查询**
+
+总的来说，MySQL认为任何一个查询都是一次关联，并不仅仅是一个查询需要到两个表匹配才叫关联，所以在MySQL中，每一个查询，每一个片段（包括子查询，甚至于单表的select）都可能是关联。
+
+比如union查询的例子。对于union查询，MySQL先将一系列的单个查询结果放到一个临时表中，然后再重新读出临时表数据来完成union查询。在MySQL的概念中，每个查询都是一次关联，所以读取结果临时表也是一次关联。
+
+当前MySQL关联执行的策略很简单：MySQL对任何关联都执行嵌套循环关联操作，即MySQL现在一个表中循环取出单条数据，然后再嵌套循环到下一个表中寻找匹配的航，依次下去，直到找到所有表中匹配的行位置。然后根据各个表匹配的行，返回查询中需要的各个列。MySQL会尝试在最后一个关联表中找到所有匹配的行，如果最后一个关联表无法找到更多的行以后，MySQL返回到上一层次关联表，看是否能找到更多的匹配记录，以此类推迭代执行。
+
+按照这样的方式查找第一个表记录，再嵌套查询下一个关联表，然后回溯到上一个表，在MySQL中是通过嵌套循环的方式实现——**嵌套循环关联**。
+
+**执行计划**
+
+MySQL执行计划是一颗左侧深度优先的树。
+
+**关联查询优化器**
+
+MySQL优化器最重要的一部分就是关联查询优化，它决定了多个表关联时的顺序。通常多表关联的时候，可以有多种不同的管理按顺序来获得相同的执行结果。关联查询优化器则通过评估不同顺序时的成本来选择一个代价最小的关联查询。
+
+下面的查询可以通过不同顺序的关联最后都获得相同的结果：
+
+```sql
+select film.film_id, film.title, film.release_year, actor.actor_id, actor.first_name, actor.last_name
+from film
+         inner join film_actor using (film_id)
+         inner join actor using (actor_id)
+# explain 结果如下
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+|id|select_type|table     |partitions|type  |possible_keys|key    |key_len|ref                      |rows|filtered|Extra      |
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+|1 |SIMPLE     |actor     |NULL      |ALL   |PRIMARY      |NULL   |NULL   |NULL                     |200 |100     |NULL       |
+|1 |SIMPLE     |film_actor|NULL      |ref   |PRIMARY      |PRIMARY|2      |sakila.actor.actor_id    |27  |100     |Using index|
+|1 |SIMPLE     |film      |NULL      |eq_ref|PRIMARY      |PRIMARY|2      |sakila.film_actor.film_id|1   |100     |NULL       |
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+```
+
+从上面看到，MySQL与我们前面的计划按照相反的顺序进行关联，这样效率是否更高？使用straight_join关键字，按照之前的顺序执行看看。
+
+```sql
+explain select straight_join film.film_id, film.title, film.release_year, actor.actor_id, actor.first_name, actor.last_name
+from film
+         inner join film_actor using (film_id)
+         inner join actor using (actor_id);
++--+-----------+----------+----------+------+-------------+-------+-------+--------------------------+----+--------+-------------------------------------------------------+
+|id|select_type|table     |partitions|type  |possible_keys|key    |key_len|ref                       |rows|filtered|Extra                                                  |
++--+-----------+----------+----------+------+-------------+-------+-------+--------------------------+----+--------+-------------------------------------------------------+
+|1 |SIMPLE     |film      |NULL      |ALL   |PRIMARY      |NULL   |NULL   |NULL                      |1000|100     |NULL                                                   |
+|1 |SIMPLE     |film_actor|NULL      |index |PRIMARY      |PRIMARY|4      |NULL                      |5462|10      |Using where; Using index; Using join buffer (hash join)|
+|1 |SIMPLE     |actor     |NULL      |eq_ref|PRIMARY      |PRIMARY|2      |sakila.film_actor.actor_id|1   |100     |NULL                                                   |
++--+-----------+----------+----------+------+-------------+-------+-------+--------------------------+----+--------+-------------------------------------------------------+
+
+```
+
+可以看到，关联顺序到转后，扫描的行数减少的不是一点，速度很快。也就是倒转的关联顺序会让查询进行更少的嵌套循环和回溯操作。为了验证优化器的选择是否正确，单独执行这两个查询，并且看看对应的Last_Query_Cost状态，能看到，倒转的预估成本为：2529.432367，原来的查询的预估成本为：601068.477855。
+
+上面的栗子说明MySQL是如何选择合适的管理按顺序让查询执行的成本尽可能低的。重新定义关联的顺序是优化器非常重要的一部分功能。不过有的时候，优化器给出的并不是最优的关联顺序。这时可以使用**straight_join**关键字重写查询。不过大多数时候，选择器做出的选择都比普通人的判断更准确。
+
+有时，各个查询的顺序并不能随意安排，这时关联优化器可以根据这些规则大大减少搜索空间，比如，左连接，相关子查询。这是因为，后面的表的查询需要依赖前面表的查询结果。这种依赖关系通常可以帮助优化器大大减少需要扫描的执行计划数量。
+
+**排序优化**
+
+从性能角度，应当尽可能避免排序或者尽可能避免对大量数据进行排序。
+
+当不能使用索引生成排序结果的时候，MySQL需要自己进行排序，如果数据量小则在内存中进行，如果数据量大则需要使用磁盘，不过MySQL将这个过程统一称为**文件排序（filesort）**，即使完全是内存排序不需要任何磁盘文件时也是如此。
+
+如果需要排序的数据量小于”排序缓冲区“，MySQL使用内存进行快速排序操作。如果内存不够排序，那么MySQL会现将数据分块，对每个独立的块使用快排，然后将各个块的排序结果存放在磁盘上，然后将各个排好序的块进行合并，最后返回排序结果。
+
+两种排序算法：
+
+- 两次传输排序（旧版本）
+- 单词传输排序（新版本）
+
+MySQL在进行文件排序的时候需要时候的临时存储空间可能会比想象的要大得多。原因在于MySQL在排序时，对每一个排序记录都会分配一个足够长的定长空间来存放。这个定长空间必须足够长以容纳其中最长的字符串。例如，如果是varchar列则需要分配其完整长度；如果是UTF-8字符集，那么MySQL将会为每个字符预留三个字节。
+
+在关联的时候如果需要排序，MySQL会分两种情况来处理这样的文件排序。如果order by 子句中的所有列都来自关联的第一个表，那么MySQL在关联处理第一个表的时候就进行文件排序。如果是这样，那么在MySQL的explain结果中可以看到extra字段会有**Using filesort**。除此之外的所有情况，MySQL都会先将关联的结果存放到一个临时表中，然后在所有的关联都结束后，再进行文件排序。这种情况下，在MySQL的explain结果的extra列字段可以看到**Using temporary; Using filesort**。如果查询中有limit的话，limit也会在排序之后应用，所以即使需要返回较少的数据，临时表和需要排序的数据量仍然会非常大。
+
+随着MySQL的升级，当只需要返回部分排序结果的时候，例如使用了LIMIT子句，MySQL不再对所有的结果进行排序，而是根据实际情况，选择抛弃不满足条件的结果，然后再进行排序。
+
+| 4.4 查询执行引擎
+
+查询执行引擎根据执行计划完成整个查询。调用存储引擎实现的接口，也就是handler api，来完成。
+
+| 4.5 返回结果给客户端
+
+即使查询不需要返回结果集给客户端，MySQL仍然会返回这个查询的一些信息，如该查询影响到的行数。如果查询可以被缓存，那么MySQL也会在这个阶段将结果存到查询缓存中。
+
+MySQL将结果集返回客户端是一个增量、逐步返回的过程。一旦服务器处理完最后一个关联表，开始生层第一条结果时，MySQL就可以开始向客户端逐步返回结果集了。
+
+这样有两个好处：服务端无需存储太多的结果，也就不会因为要返回太多结果而消耗太多内存。另外，MySQL客户端也能第一时间获得返回的结果。
+
+| 5. MySQL查询优化器的局限性
+
+5.6之后，很多限制都会消除，更多的查询效率会变得更高。
+
+| 5.1 关联子查询
+
+***很重要的一点，MySQL8.x之后，得到了优化。下面说的，全部都是基于5.6版本。***
+
+MySQL的子查询实现非常差。最糟糕的一类查询是where条件中包含IN()的子查询。比如：
+
+```sql
+ select * from film where film_id in (
+    select film_id from film_actor where actor_id = 1
+    );
+# 这是8.x 之后的执行计划
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+|id|select_type|table     |partitions|type  |possible_keys|key    |key_len|ref                      |rows|filtered|Extra      |
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+|1 |SIMPLE     |film_actor|NULL      |ref   |PRIMARY      |PRIMARY|2      |const                    |19  |100     |Using index|
+|1 |SIMPLE     |film      |NULL      |eq_ref|PRIMARY      |PRIMARY|2      |sakila.film_actor.film_id|1   |100     |NULL       |
++--+-----------+----------+----------+------+-------------+-------+-------+-------------------------+----+--------+-----------+
+
+```
+
+因为MySQL对IN()列表中的选项有专门的优化策略，一般会认为MySQL会先执行子查询返回所有包含actor_id为1的film_id。一般来说，IN()列表查询速度很快，所以我们以为的查询的执行：
+
+```sql
+select * from film where film_id in (1,23,25,106,140,166,277,361,438,499,506,509,605,635,749,832,939,970,980);
+```
+
+但是，MySQL不是这么做的。MySQL会将相关的外层表压到子查询中，他认为这样可以更高效率地找到数据行，也就是说，会被改写为：
+
+```sql
+select *
+from film
+where exists(
+              select *
+              from film_actor
+              where actor_id = 1
+                and film_actor.film_id = film.film_id
+          )
+
+```
+
+这时，子查询需要根据film_id来关联外部表film，因为需要film_id字段，所以MySQL认为无法先执行这个子查询。
+
+通过explain可以看到，MySQL先选择对file表进行全表扫描，然后根据返回的film_id逐个执行子查询。如果是一个很小的表，这个查询糟糕的性能可能还不会引起注意，但是如果外层的表是一个非常大的表，那么这个查询性能会非常糟糕。所以。可以用下面的办法重写查询
+
+```sql
+select film.*
+from film
+         inner join film_actor using (film_id)
+where actor_id = 1;
+```
+
+另一个优化的办法是使用group_concat在in中构造一个由分号分割的列表。有时候这比上面使用关联改写更快。因为使用IN加子查询，性能经常会非常糟糕，所以通常建议使用EXISTS等效的改写查询来获取更好的效率。比如：
+
+```sql
+select * from film where exists(
+    select * from film_actor where actor_id = 1
+    and film_actor.film_id = film.film_id
+                             )
+```
+
+其他的不写了，MySQL推出了Materialization这个特性用于子查询。上面的都没用了。
+
+| 5.2 union的限制
+
+有时，MySQL无法将限制条件从外层下推到内层，这使得能够限制不拿分返回结果的条件无法应用到内层查询的优化上。
+
+如果希望UNION的各个子句能够根据LIMIT只取部分结果集，或者希望能够先排好序再合并结果集的话，就需要在UNION的各个子句中分别使用这些子句。例如，想将两个子查询联合起来，然后再取前20条记录，那么MySQL会将两个表都存放到同一个临时表中，然后再取出前20行记录：
+
+```sql
+    (select first_name, last_name from actor order by last_name)
+    union all
+    (select first_name, last_name from customer order by last_name)
+    limit 20;
+```
+
+这条查询将会把actor中的200条记录和customer表中的599条记录存放在一个临时表中，然后再从临时表中取出前20条。可以通过在UNION的两个子查询中分别加上一个LIMIT 20来减少临时表中的数据：
+
+```sql
+
+```
