--- a/source/_posts/Book Nodes/高性能MySQL/4-查询性能优化.md
+++ b/source/_posts/Book Nodes/高性能MySQL/4-查询性能优化.md
@@ -341,5 +341,223 @@ select * from film where exists(
 这条查询将会把actor中的200条记录和customer表中的599条记录存放在一个临时表中，然后再从临时表中取出前20条。可以通过在UNION的两个子查询中分别加上一个LIMIT 20来减少临时表中的数据：
 
 ```sql
-
+(select first_name,last_name from actor order by last_name limit 20)
+union
+(select first_name,last_name from customer order by last_name  limit 20) limit 20;
 ```
+
+现在的话，中间的临时表只会包含40条记录了，除了性能考虑之外，这里还需要注意，从临时表中取出数据的顺序并不一定是一定的，所以如果想获得正确的顺序，还需要加上一个全局的order by 和 limit 操作。
+
+| 5.3 索引合并优化
+
+在5.0以后，当where子句中包含多个复杂条件的时候，MySQL能够访问单个表的多个索引以合并和交叉过滤的方式来定位需要查找的行。
+
+| 5.4 等值传递
+
+某些时候，等值传递会带来一些意想不到的额外消耗。例如，有一个非常大的IN列表,而MySQL优化器发现存在where、on或者using的子句，将这个列表的值和另外一个表的某个列相关联。
+
+那么优化器会将IN的列表都复制应用到关联的各个表中。通常，因为各个表新增了过滤条件，优化器可以更高效的从存储引擎过滤记录。但是如果这个列表非常大，泽会导致优化和执行都会变慢。
+
+| 5.5 并行执行
+
+MySQL无法利用多核特性来并行执行查询。
+
+| 5.6 哈希关联
+
+MySQL并不支持哈希关联，MySQL的所有关联都是嵌套循环关联。
+
+| 5.7 松散索引扫描
+
+MySQL并不支持松散索引扫描，5.0之后，某些特殊的场景可以使用松散索引扫描，比如：
+
+```sql
+explain select actor_id,max(film_id) from film_actor group by actor_id;
++--+-----------+----------+----------+-----+----------------------+-------+-------+----+----+--------+------------------------+
+|id|select_type|table     |partitions|type |possible_keys         |key    |key_len|ref |rows|filtered|Extra                   |
++--+-----------+----------+----------+-----+----------------------+-------+-------+----+----+--------+------------------------+
+|1 |SIMPLE     |film_actor|NULL      |range|PRIMARY,idx_fk_film_id|PRIMARY|2      |NULL|201 |100     |Using index for group-by|
++--+-----------+----------+----------+-----+----------------------+-------+-------+----+----+--------+------------------------+
+```
+
+在explain的extra字段显示“Using index for gruop-by”，表示这样将使用松散索引扫描
+
+| 5.8 MySQL的最大值和最小值优化并不好
+
+| 5.9 在同一表上查询和更新
+
+MySQL不允许对同一张表同时进行查询和更新。但是其实并不是优化器的限制，改用JOIN可以解决
+
+| 6 查询优化器的提示
+
+- HIGI_PRIORITY 和 LOW_PRIORITY
+- DELAYED
+- STRAIGHT_JOIN
+- SQL_SMALL_RESULT 和 SQL_BIG_RESULT
+- SQL_BUFFER_RESULT
+- SQL_CACHE  和 SQL_NO_CACHE
+- SQL_CALC_FOUND_ROWS
+- FOR UPDATE 和 LOCK IN SHARE MODE
+- USE INDEX 、 IGNORE INDEX 和 FORCE INDEX
+- optimizer_search_depth
+- optimizer_prune_level
+- optimizer_switch
+
+| 7 优化特性类型的查询
+
+| 7.1 优化count()查询
+
+count是一个特殊的函数，有两种非常不同的作用：**可以用来统计某个列值的数量，也可以统计行数**。在统计列值时，要求列值是非空的（不能为null）。如果在count()的括号中指定了列或者列的表达式，则统计的就是这个表达式有值的结果数。
+
+另一个作用是统计结果集的行数。当MySQL确认括号内的表达式值不可能为空时，实际上就是在统计行数。最简单的就是当我们使用count(*)的时候，这种情况下通配符*并不会向我们猜想的那样扩展城所有的列，实际上，它会忽略所有的列而直接统计所有的行数。
+
+通常来说，count()都需要扫描大量的行才能活着精确的结果，因此是很难有花的。在MySQL层面还能做的就是覆盖索引扫描了。如果还不够，就需要考虑修改应用的架构，增加汇总表，或者memcached这样的外部缓存系统
+
+| 7.2 优化关联查询
+
+- 确保on或者using子句中的列上有索引。在创建索引的时候就要考虑到关联的顺序。当表A和表B用列C关联的时候，如果有花期的管理按顺序是B、A，那么就不需要在B表的对应列建上索引。没有用到的索引只会带来额外的附带。一般来说，除非有其他理由，否则只需要在管理按顺序中的第二个表的相应列上创建索引。
+- 确保确保任何的group by 和 order by 中的表达式只涉及到一个表中的列，这样MySQL才有可能使用索引来优化这个过程。
+- 当升级MySQL的时候需要注意：关联语法、运算符优先级等其他可能会发生变化的地方。因为以前是普通关联的地方可能会变成笛卡尔积，不同类型的关联可能会生成不同的结果等。
+
+| 7.3 子查询优化，MySQL5.6之后不用管
+
+| 7.4 优化group by 和 distinct
+
+这两类都可以使用索引来优化，这也是最有效的优化办法。
+
+在MySQL中，当无法使用所以你的时候，group by使用相中策略来完成：使用临时表或者文件排序来做分组。对于任何查询语句，这两种策略的性能都有可以提神的地方。可以通过使用提示SQL_BIG_RESULT和SQL_SMALL_RESULT来让优化器按照你希望的方式运行。
+
+如果需要对关联查询做分组，并且是按照查找表中的某个列进行分组，那么通常采用查找表的标识列分组的效率会比其他列更高。例如下面的查询效率不会很好
+
+```sql
+ select actor.first_name,actor.last_name,count(*) from film_actor inner join actor using(actor_id) group by  actor.first_name, actor.last_name;
+```
+
+但是如果查询按照下面的写法效率则会更高：
+
+```sql
+ select actor.first_name,actor.last_name,count(*) from film_actor inner join actor using(actor_id) group by actor.actor_id;
+```
+
+虽然效率更高，但显然不是所有的关联语句的分组都可以改写成在select中使用非分祖列的形式。如果sql_mode禁用，可以使用min或者max来跳过。但是一定要清楚，select后面出现的非分祖列一定是直接依赖分组列，并且在每个组内的值是唯一的，
+
+**优化GROUP BY WITH ROLLUP**
+
+最好的办法是尽可能的将WITH ROLLUP功能转移到应用程序中处理
+
+| 7.5 limit分页优化
+
+偏移量很大的时候，代价非常高，想要优化这种查询，要么是在页面中限制分页的数量，要么是优化大偏移量的性能。
+
+一个组简单的办法就是尽可能地使用索引覆盖扫描，而不是查询所有的列。然后根据需要做一次关联操作再返回所需的咧。对于偏移量很大的时候，这样做的效率会提升非常大。
+
+```sql
+select film_id,description from film order by title limit 50,5;
+# 如果这个表非常大，查询最好改写为：
+select film_id,description from film inner join (
+    select film_id from film order by title limit 50,5
+    ) as lim using (film_id)
+```
+
+这里的延迟关联将大大提升查询效率，它让MySQL扫描尽可能少的页面，获取需要访问的记录后再根据关联列返回原表查询需要的所有列。这个技术也可以用于优化关联查询中的limit子句。
+
+有时候也可以将limit转换查询为已知位置的查询，让MySQL通过范围扫描获得对应的结果，例如：
+
+```sql
+select * from film where position between 50 and 54 order by position;
+```
+
+limit和offset的问题，其实是offset的问题，会导致MySQL查询大量不需要的行然后再抛弃掉，如果可以使用数钱记录上次取数据的位置，那么下次就可以直接从概述前记录的位置开始扫描，遮掩的话就可以避免使用offset。例如：
+
+```sql
+select * from rental order by rental_id desc limit 20;
+# 假设上面的查询返回的是主键为16049到16030的租借记录，那么下一页的查询就可以从16030这个点开始
+select * from rental where rental_id < 16030 order by rental_id desc limit 20;
+```
+
+这样的话，不管翻页到多么后面，新跟那个都会很好。
+
+| 7.7 优化union查询
+
+需要经常手工地将where，limit，order by等子句下推到union的各个子查询中，以便于优化器优化。
+
+除非确实需要服务器消除重复的行，否则就一定要使用union all，如果没有all关键字，MySQL会给临时表加上distinct选项，这会导致对整个临时表的数据做唯一性检查，代价很高。
+
+| 7.8 用户自定义变量
+
+大部分时候，普通开发用不到
+
+| 8.2 计算两点之间的距离
+
+```sql
+CREATE TABLE locations(
+    id int not null primary key auto_increment,
+    name varchar(30),
+    lat float not null,
+    lon float not null
+);
+insert into locations(name, lat, lon)
+values
+       ('Charlottesville',38.03,-78.48) ,
+       ('Chicago',41.85,-87.65),
+       ('Washington，DC',38.89,-77.04);
+# 单位是度，假设地球是原的，然后使用连点所在最大圆公式来计算两点之间的距离
+# 计算出来是一个弧度，如果需要转换为英里或者千米，需要乘以地球的半径，也就是3959英里或者6371千米
+# ACOS (
+#     COS(latA) * COS(latB) * COS(lonA - lonB) + SIN(latA) * Sin(latB)
+# )
+
+select * from locations where 6371 * ACOS(
+    COS(RADIANS(lat)) * COS(RADIANS(38.03)) * COS(RADIANS(lon)-RADIANS(-78.48))
+        + SIN(RADIANS(lat)) * SIN(RADIANS(38.03))
+    )<=100;
+```
+
+这类查询无法使用索引，还会非常消耗CPU时间,给服务器带来很大的压力，还得重复计算。一般情况不推荐在MySQL中进行地理位置信息的计算。
+
+| 8.3 用户自定义函数
+
+使用C或者C++自定义
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
