--- a/source/_posts/Interview/可能的一些面试题.md
+++ b/source/_posts/Interview/可能的一些面试题.md
@@ -51,4 +51,12 @@ description: 可能的一些面试题
 
 19. 说一下HTTP的长连接和短连接
 
-20. 
+20. 怎么保证消息不被重复消费？
+
+21. 如何保证消息的可靠性传输？（比如消息丢失）
+
+22. 如何保证消息队列里拿到的数据按顺序执行？
+
+23. 如何解决消息队列的延时以及过期失效问题？消息队列满了之后怎么处理？有几百万消息持续积压几小时，说说怎么解决？
+
+24. 
