--- a/source/_posts/Interview/可能的一些面试题.md
+++ b/source/_posts/Interview/可能的一些面试题.md
@@ -59,4 +59,18 @@ description: 可能的一些面试题
 
 23. 如何解决消息队列的延时以及过期失效问题？消息队列满了之后怎么处理？有几百万消息持续积压几小时，说说怎么解决？
 
-24. 
+24. Spring Cloud 和 Dubbo 的区别是什么
+
+25. 什么是Hystrix？它如何实现容错？
+
+26. 什么是 Netflix Feign？它的优点是什么？
+
+27. 说一下spring cloud的优缺点
+
+28. Eureka和ZooKeeper都能实现服务注册和服务发现的功能，说一说这两个的优缺点，对比一下
+
+29. 说一下工作中你用到的设计模式有哪些？怎么用的？
+
+    重点说单例模式，适配器模式，策略模式，工厂模式，抽象工厂模式，门面模式，模板模式，迭代器模式，组合模式，状态模式，代理模式，复合模式
+
+30. 
