--- a/source/_posts/Interview/可能的一些面试题.md
+++ b/source/_posts/Interview/可能的一些面试题.md
@@ -73,4 +73,8 @@ description: 可能的一些面试题
 
     重点说单例模式，适配器模式，策略模式，工厂模式，抽象工厂模式，门面模式，模板模式，迭代器模式，组合模式，状态模式，代理模式，复合模式
 
-30. 
+30. Elasticsearch 是如何实现选举的？
+
+31. Elasticsearch中的节点有20个，其中10个选举了一个master，另外10个选了另外一个master，怎么办
+
+32. 详细描述一下Elasticsearch索引文档的过程。
